fix: søknaddto angitte personer (#3219)